package com.closedsource.qualitrack.platform.laboratory.domain.model.aggregates;

import com.closedsource.qualitrack.platform.laboratory.domain.model.commands.CreateLaboratoryCommand;
import com.closedsource.qualitrack.platform.laboratory.domain.model.commands.UpdateLaboratoryCommand;
import com.closedsource.qualitrack.platform.laboratory.domain.model.entities.LaboratoryAddress;
import com.closedsource.qualitrack.platform.laboratory.domain.model.events.LaboratoryRegisteredEvent;
import com.closedsource.qualitrack.platform.laboratory.domain.model.valueobjects.LaboratoryName;
import com.closedsource.qualitrack.platform.laboratory.domain.model.valueobjects.LaboratoryStatus;
import com.closedsource.qualitrack.platform.shared.domain.model.aggregates.AbstractDomainAggregateRoot;
import lombok.Getter;

import java.util.ArrayList;
import java.util.List;

/**
 * Laboratory aggregate root.
 *
 * <p>Represents a pharmaceutical laboratory within the platform.
 * Governs the state of the laboratory, its profile, and regulatory compliance status.</p>
 */
@Getter
public class Laboratory extends AbstractDomainAggregateRoot<Laboratory> {

    /**
     * The unique business identifier for the laboratory.
     */
    private Long id;

    private LaboratoryName name;

    private String ruc;

    private String phone;

    private List<String> applicableRegulations;

    private LaboratoryStatus status;

    private LaboratoryAddress address;

    /**
     * Default constructor for Laboratory.
     * Required for reconstruction from persistence.
     */
    public Laboratory() {
        // Required for reconstruction by JPA/Assemblers
    }

    /**
     * Constructor for reconstruction from the persistence layer (Assembler).
     * * @param id The numeric laboratory ID.
     * @param name The laboratory name.
     * @param ruc The tax identification number.
     * @param phone The contact phone.
     * @param applicableRegulations The list of regulations.
     * @param status The current status.
     * @param address The laboratory address.
     */
    public Laboratory(Long id, LaboratoryName name, String ruc, String phone, List<String> applicableRegulations, LaboratoryStatus status, LaboratoryAddress address) {
        this.id = id;
        this.name = name;
        this.ruc = ruc;
        this.phone = phone;
        this.applicableRegulations = applicableRegulations;
        this.status = status;
        this.address = address;
    }

    /**
     * Constructor for Laboratory with a CreateLaboratoryCommand.
     * Initializes a new laboratory with ACTIVE status.
     * * @param command The CreateLaboratoryCommand.
     */
    public Laboratory(CreateLaboratoryCommand command) {
        // ID is left null to be auto-generated by the database
        this.name = new LaboratoryName(command.name());
        this.ruc = command.ruc();
        this.phone = command.phone();
        this.applicableRegulations = new ArrayList<>(command.applicableRegulations());
        this.status = LaboratoryStatus.ACTIVE;
        this.address = new LaboratoryAddress(command.address());
    }

    /**
     * Updates the laboratory profile information.
     * * @param command The UpdateLaboratoryCommand.
     */
    public void updateProfile(UpdateLaboratoryCommand command) {
        this.name = new LaboratoryName(command.name());
        this.phone = command.phone();
        this.address = new LaboratoryAddress(command.address());
        this.applicableRegulations = new ArrayList<>(command.applicableRegulations());
    }

    /**
     * Suspends the laboratory operations.
     */
    public void suspendOperations() {
        if (this.status == LaboratoryStatus.SUSPENDED) {
            throw new IllegalStateException("Laboratory is already suspended");
        }
        this.status = LaboratoryStatus.SUSPENDED;
    }

    /**
     * Signals that this laboratory has just been registered.
     * Registers a {@link LaboratoryRegisteredEvent} for other bounded contexts.
     */
    public void onRegistered() {
        registerDomainEvent(LaboratoryRegisteredEvent.from(this));
    }
}