package com.closedsource.qualitrack.platform.laboratory.domain.model.aggregates;

import com.closedsource.qualitrack.platform.laboratory.domain.model.commands.CreateProductCommand;
import com.closedsource.qualitrack.platform.shared.domain.model.aggregates.AbstractDomainAggregateRoot;
import lombok.Getter;

import java.util.Objects;

/**
 * The PharmaceuticalProduct Aggregate Root.
 *
 * <p>Represents a final or intermediate pharmaceutical product manufactured
 * by a laboratory within the QualiTrack platform. This entity tracks essential
 * catalog details such as technical specifications, internal code, and active status.</p>
 */
@Getter
public class PharmaceuticalProduct extends AbstractDomainAggregateRoot<PharmaceuticalProduct> {

    /**
     * The unique numeric identifier for the pharmaceutical product.
     */
    private Long id;

    /**
     * The numeric identifier of the laboratory that manufactures this product.
     */
    private Long laboratoryId;

    /**
     * The internal registration code that uniquely identifies this product
     * within the laboratory's catalog.
     */
    private String code;

    private String name;

    private String description;

    /**
     * The technical specifications of the pharmaceutical product.
     * Replaces the old 'activeIngredient' to match frontend requirements.
     */
    private String specifications;

    /**
     * Indicates whether this pharmaceutical product is currently active in the system.
     */
    private boolean active;

    /**
     * Default constructor.
     * <p>Required by the persistence and mapping layers (Assemblers) to reconstruct
     * the entity from the database without triggering business logic.</p>
     */
    public PharmaceuticalProduct() {
        // Required for reconstruction by JPA or Assemblers
    }

    /**
     * Reconstructs a PharmaceuticalProduct entity from persistence data.
     *
     * @param id The unique numeric product ID.
     * @param laboratoryId The numeric ID of the manufacturing laboratory.
     * @param code The internal registration code.
     * @param name The name of the product.
     * @param description A brief description of the product.
     * @param specifications The technical specifications.
     * @param active The active status flag.
     */
    public PharmaceuticalProduct(Long id, Long laboratoryId, String code, String name, String description, String specifications, boolean active) {
        this.id = id;
        this.laboratoryId = laboratoryId;
        this.code = code;
        this.name = name;
        this.description = description;
        this.specifications = specifications;
        this.active = active;
    }

    /**
     * Creates a new PharmaceuticalProduct based on the provided creation command.
     * <p>The numeric ID is intentionally left null here to be auto-generated by the
     * persistence mechanism upon saving. Products are active by default upon creation.</p>
     *
     * @param command The command containing the required initialization data.
     */
    public PharmaceuticalProduct(CreateProductCommand command) {
        this.laboratoryId = Objects.requireNonNull(command.laboratoryId(), "Laboratory ID is required");
        this.code = Objects.requireNonNull(command.code(), "Product code is required");
        this.name = Objects.requireNonNull(command.name(), "Product name is required");
        this.description = command.description();
        this.specifications = Objects.requireNonNull(command.specifications(), "Specifications are required");
        this.active = true; // Default state upon creation
    }

    /**
     * Toggles the active status of the pharmaceutical product.
     */
    public void toggleActiveStatus() {
        this.active = !this.active;
    }
}