package com.closedsource.qualitrack.platform.laboratory.domain.model.aggregates;

import com.closedsource.qualitrack.platform.laboratory.domain.model.commands.RegisterStaffCommand;
import com.closedsource.qualitrack.platform.laboratory.domain.model.events.StaffRegisteredEvent;
import com.closedsource.qualitrack.platform.shared.domain.model.aggregates.AbstractDomainAggregateRoot;
import lombok.Getter;

import java.util.Objects;

/**
 * The StaffMember Aggregate Root.
 *
 * <p>Represents an employee or personnel operating within a specific laboratory.
 * This entity governs the lifecycle of a staff member's assignment, their role,
 * and their operational status (active/inactive) within the QualiTrack platform.</p>
 */
@Getter
public class StaffMember extends AbstractDomainAggregateRoot<StaffMember> {

    /**
     * The unique numeric identifier for the staff member.
     */
    private Long id;

    /**
     * The numeric identifier of the laboratory this staff member belongs to.
     */
    private Long laboratoryId;

    /**
     * The full legal name of the staff member.
     */
    private String fullName;

    /**
     * The assigned role or professional title.
     */
    private String role;

    /**
     * Institutional or corporate email address.
     */
    private String email;

    /**
     * Indicates whether the staff member is currently active in the system.
     */
    private boolean active;

    /**
     * Default constructor.
     * <p>Required by the persistence and mapping layers (Assemblers) to reconstruct
     * the entity from the database without triggering business logic.</p>
     */
    public StaffMember() {
        // Required for reconstruction by JPA or Assemblers
    }

    /**
     * Reconstructs a StaffMember entity from persistence data.
     *
     * @param id The unique numeric staff member ID.
     * @param laboratoryId The numeric ID of the associated laboratory.
     * @param fullName The staff member's full name.
     * @param role The assigned role or job title.
     * @param email The corporate email address.
     * @param active The current operational status.
     */
    public StaffMember(Long id, Long laboratoryId, String fullName, String role, String email, boolean active) {
        this.id = id;
        this.laboratoryId = laboratoryId;
        this.fullName = fullName;
        this.role = role;
        this.email = email;
        this.active = active;
    }

    /**
     * Registers a new StaffMember based on the provided command.
     * <p>Initializes the entity and sets the default status to active.
     * The numeric ID is intentionally left null here to be auto-generated by the
     * persistence mechanism upon saving.</p>
     *
     * @param command The command containing the registration data.
     */
    public StaffMember(RegisterStaffCommand command) {
        this.laboratoryId = Objects.requireNonNull(command.laboratoryId(), "Laboratory ID is required");
        this.fullName = Objects.requireNonNull(command.fullName(), "Full name is required");
        this.role = Objects.requireNonNull(command.role(), "Role is required");
        this.email = Objects.requireNonNull(command.email(), "Email is required");
        this.active = true;

        // Note: Event is registered here but the actual ID will be null until persistence.
        // If the downstream event handler requires the generated ID, you should emit
        // the event from the Application Service AFTER saving, rather than in this constructor.
        this.registerDomainEvent(new StaffRegisteredEvent(this.id, this.laboratoryId, this.fullName, this.role, this.email));
    }

    /**
     * Deactivates the staff member's access or assignment.
     * <p>Business Rule: An already inactive staff member cannot be deactivated again.</p>
     *
     * @throws IllegalStateException if the staff member is already inactive.
     */
    public void deactivate() {
        if (!this.active) {
            throw new IllegalStateException("Staff member is already inactive.");
        }
        this.active = false;
    }
}